[tool.poetry]
name = "dataqa-python"
version = "0.1.0"
description = ""
authors = ["Maria Mestre <maria@dataqa.ai>","Stuart Quin <stuart@dataqa.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pandas = "^1.4.4"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
