[tool.poetry]
name = "dataqa"
version = "2.0.3"
description = "Python Client library for DataQA"
authors = ["Maria Mestre <maria@dataqa.ai>","Stuart Quin <stuart@dataqa.ai>"]
readme = "README.md"
homepage = "https://dataqa.ai"
repository = "https://github.com/dataqa/dataqa-python"
documentation = "https://docs.dataqa.ai"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pandas = "^1.4.4"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
